SERVER-23436 ProjectionNode::getSort propagates sort from children.