src/mongo/db/query/parsed_projection.cpp
@@ -54,9 +54,6 @@ Status ParsedProjection::make(const BSONObj& spec,
     IncludeExclude includeExclude = IncludeExclude::kUninitialized;
 
     bool requiresDocument = false;
-
-    bool includeID = true;
-
     bool hasIndexKeyProjection = false;
 
     bool wantGeoNearPoint = false;
@@ -66,12 +63,13 @@ Status ParsedProjection::make(const BSONObj& spec,
     // Until we see a positional or elemMatch operator we're normal.
     ArrayOpType arrayOpType = ARRAY_OP_NORMAL;
 
-    BSONObjIterator it(spec);
-    while (it.more()) {
-        BSONElement e = it.next();
+    // Fill out the returned obj.
+    unique_ptr<ParsedProjection> pp(new ParsedProjection());
+    pp->_hasId = true;
 
-        if (Object == e.type()) {
-            BSONObj obj = e.embeddedObject();
+    for (auto&& elem : spec) {
+        if (Object == elem.type()) {
+            BSONObj obj = elem.embeddedObject();
             if (1 != obj.nFields()) {
                 return Status(ErrorCodes::BadValue, ">1 field in obj: " + obj.toString());
             }
@@ -100,6 +98,7 @@ Status ParsedProjection::make(const BSONObj& spec,
 
                 // Projections with $slice aren't covered.
                 requiresDocument = true;
+                pp->_arrayFields.push_back(elem.fieldNameStringData());
             } else if (mongoutils::str::equals(e2.fieldName(), "$elemMatch")) {
                 // Validate $elemMatch arguments and dependencies.
                 if (Object != e2.type()) {
@@ -112,7 +111,7 @@ Status ParsedProjection::make(const BSONObj& spec,
                                   "Cannot specify positional operator and $elemMatch.");
                 }
 
-                if (mongoutils::str::contains(e.fieldName(), '.')) {
+                if (mongoutils::str::contains(elem.fieldName(), '.')) {
                     return Status(ErrorCodes::BadValue,
                                   "Cannot use $elemMatch projection on a nested field.");
                 }
@@ -120,8 +119,8 @@ Status ParsedProjection::make(const BSONObj& spec,
                 arrayOpType = ARRAY_OP_ELEM_MATCH;
 
                 // Create a MatchExpression for the elemMatch.
-                BSONObj elemMatchObj = e.wrap();
-                verify(elemMatchObj.isOwned());
+                BSONObj elemMatchObj = elem.wrap();
+                invariant(elemMatchObj.isOwned());
 
                 // TODO: Is there a faster way of validating the elemMatchObj?
                 StatusWithMatchExpression statusWithMatcher =
@@ -132,9 +131,10 @@ Status ParsedProjection::make(const BSONObj& spec,
 
                 // Projections with $elemMatch aren't covered.
                 requiresDocument = true;
+                pp->_arrayFields.push_back(elem.fieldNameStringData());
             } else if (mongoutils::str::equals(e2.fieldName(), "$meta")) {
                 // Field for meta must be top level.  We can relax this at some point.
-                if (mongoutils::str::contains(e.fieldName(), '.')) {
+                if (mongoutils::str::contains(elem.fieldName(), '.')) {
                     return Status(ErrorCodes::BadValue, "field for $meta cannot be nested");
                 }
 
@@ -168,33 +168,40 @@ Status ParsedProjection::make(const BSONObj& spec,
                 if (e2.valuestr() != LiteParsedQuery::metaSortKey) {
                     requiresDocument = true;
                 }
+                pp->_metaFields.push_back(elem.fieldNameStringData());
             } else {
                 return Status(ErrorCodes::BadValue,
-                              string("Unsupported projection option: ") + e.toString());
+                              string("Unsupported projection option: ") + elem.toString());
             }
-        } else if (mongoutils::str::equals(e.fieldName(), "_id") && !e.trueValue()) {
-            includeID = false;
+        } else if (mongoutils::str::equals(elem.fieldName(), "_id") && !elem.trueValue()) {
+            pp->_hasId = false;
         } else {
             // Projections of dotted fields aren't covered.
-            if (mongoutils::str::contains(e.fieldName(), '.')) {
+            if (mongoutils::str::contains(elem.fieldName(), '.')) {
                 requiresDocument = true;
+            }
+
+            if (elem.trueValue()) {
+                pp->_includedFields.push_back(elem.fieldNameStringData());
+            } else {
+                pp->_excludedFields.push_back(elem.fieldNameStringData());
             }
 
             // If we haven't specified an include/exclude, initialize includeExclude. We expect
             // further include/excludes to match it.
             if (includeExclude == IncludeExclude::kUninitialized) {
                 includeExclude =
-                    e.trueValue() ? IncludeExclude::kInclude : IncludeExclude::kExclude;
-            } else if ((includeExclude == IncludeExclude::kInclude && !e.trueValue()) ||
-                       (includeExclude == IncludeExclude::kExclude && e.trueValue())) {
+                    elem.trueValue() ? IncludeExclude::kInclude : IncludeExclude::kExclude;
+            } else if ((includeExclude == IncludeExclude::kInclude && !elem.trueValue()) ||
+                       (includeExclude == IncludeExclude::kExclude && elem.trueValue())) {
                 return Status(ErrorCodes::BadValue,
                               "Projection cannot have a mix of inclusion and exclusion.");
             }
         }
 
-        if (_isPositionalOperator(e.fieldName())) {
+        if (_isPositionalOperator(elem.fieldName())) {
             // Validate the positional op.
-            if (!e.trueValue()) {
+            if (!elem.trueValue()) {
                 return Status(ErrorCodes::BadValue,
                               "Cannot exclude array elements with the positional operator.");
             }
@@ -209,23 +216,24 @@ Status ParsedProjection::make(const BSONObj& spec,
                               "Cannot specify positional operator and $elemMatch.");
             }
 
-            std::string after = mongoutils::str::after(e.fieldName(), ".$");
+            std::string after = mongoutils::str::after(elem.fieldName(), ".$");
             if (mongoutils::str::contains(after, ".$")) {
                 mongoutils::str::stream ss;
-                ss << "Positional projection '" << e.fieldName() << "' contains "
+                ss << "Positional projection '" << elem.fieldName() << "' contains "
                    << "the positional operator more than once.";
                 return Status(ErrorCodes::BadValue, ss);
             }
 
-            std::string matchfield = mongoutils::str::before(e.fieldName(), '.');
+            std::string matchfield = mongoutils::str::before(elem.fieldName(), '.');
             if (!_hasPositionalOperatorMatch(query, matchfield)) {
                 mongoutils::str::stream ss;
-                ss << "Positional projection '" << e.fieldName() << "' does not "
+                ss << "Positional projection '" << elem.fieldName() << "' does not "
                    << "match the query document.";
                 return Status(ErrorCodes::BadValue, ss);
             }
 
             arrayOpType = ARRAY_OP_POSITIONAL;
+            pp->_arrayFields.push_back(elem.fieldNameStringData());
         }
     }
 
@@ -236,8 +244,7 @@ Status ParsedProjection::make(const BSONObj& spec,
         requiresDocument = true;
     }
 
-    // Fill out the returned obj.
-    unique_ptr<ParsedProjection> pp(new ParsedProjection());
+    pp->_isInclusionProjection = (includeExclude == IncludeExclude::kInclude);
 
     // The positional operator uses the MatchDetails from the query
     // expression to know which array element was matched.
@@ -257,7 +264,7 @@ Status ParsedProjection::make(const BSONObj& spec,
     // If it's possible to compute the projection in a covered fashion, populate _requiredFields
     // so the planner can perform projection analysis.
     if (!pp->_requiresDocument) {
-        if (includeID) {
+        if (pp->_hasId) {
             pp->_requiredFields.push_back("_id");
         }
 
@@ -268,7 +275,7 @@ Status ParsedProjection::make(const BSONObj& spec,
         while (srcIt.more()) {
             BSONElement elt = srcIt.next();
             // We've already handled the _id field before entering this loop.
-            if (includeID && mongoutils::str::equals(elt.fieldName(), "_id")) {
+            if (pp->_hasId && mongoutils::str::equals(elt.fieldName(), "_id")) {
                 continue;
             }
             // $meta sortKey should not be checked as a part of _requiredFields, since it can
@@ -293,6 +300,69 @@ Status ParsedProjection::make(const BSONObj& spec,
     return Status::OK();
 }
 
+namespace {
+
+bool isPrefixOf(StringData first, StringData second) {
+    if (first.size() >= second.size()) {
+        return false;
+    }
+
+    return second.startsWith(first) && second[first.size()] == '.';
+}
+
+}  // namespace
+
+bool ParsedProjection::isFieldRetainedExactly(StringData path) const {
+    // If a path, or a parent or child of the path, is contained in _metaFields or in _arrayFields,
+    // our output likely does not preserve that field.
+    for (auto&& metaField : _metaFields) {
+        if (path == metaField || isPrefixOf(path, metaField) || isPrefixOf(metaField, path)) {
+            return false;
+        }
+    }
+
+    for (auto&& arrayField : _arrayFields) {
+        if (path == arrayField || isPrefixOf(path, arrayField) || isPrefixOf(arrayField, path)) {
+            return false;
+        }
+    }
+
+    if (path == "_id" || isPrefixOf("_id", path)) {
+        return _hasId;
+    }
+
+    if (!_isInclusionProjection) {
+        // If we are an exclusion projection, and the path, or a parent or child of the path, is
+        // contained in _excludedFields, our output likely does not preserve that field.
+        for (auto&& excluded : _excludedFields) {
+            if (path == excluded || isPrefixOf(excluded, path) || isPrefixOf(path, excluded)) {
+                return false;
+            }
+        }
+    } else {
+        // If we are an inclusion projection, we may include parents of this path, but we cannot
+        // include children.
+        bool fieldIsIncluded = false;
+        // In a projection with several statements, the last one takes precedence. For example, the
+        // projection {a: 1, a.b: 1} preserves 'a.b', but not 'a'.
+        // TODO SERVER-6527: Simplify this when projections are no longer order-dependent.
+        for (auto&& included : _includedFields) {
+            if (path == included || isPrefixOf(included, path)) {
+                fieldIsIncluded = true;
+            } else if (isPrefixOf(path, included)) {
+                fieldIsIncluded = false;
+            }
+        }
+
+        if (!fieldIsIncluded) {
+            return false;
+        }
+    }
+
+
+    return true;
+}
+
 // static
 bool ParsedProjection::_isPositionalOperator(const char* fieldName) {
     return mongoutils::str::contains(fieldName, ".$") &&
@@ -315,8 +385,7 @@ bool ParsedProjection::_hasPositionalOperatorMatch(const MatchExpression* const 
         const char* pathRawData = queryPath.rawData();
         // We have to make a distinction between match expressions that are
         // initialized with an empty field/path name "" and match expressions
-        // for which the path is not meaningful (eg. $where and the internal
-        // expression type ALWAYS_FALSE).
+        // for which the path is not meaningful (eg. $where).
         if (!pathRawData) {
             return false;
         }
