src/mongo/db/query/parsed_projection_test.cpp
@@ -102,7 +102,7 @@ TEST(ParsedProjectionTest, MakeEmpty) {
 TEST(ParsedProjectionTest, MakeSingleField) {
     unique_ptr<ParsedProjection> parsedProj(createParsedProjection("{}", "{a: 1}"));
     ASSERT(!parsedProj->requiresDocument());
-    const vector<string>& fields = parsedProj->getRequiredFields();
+    const vector<StringData>& fields = parsedProj->getRequiredFields();
     ASSERT_EQUALS(fields.size(), 2U);
     ASSERT_EQUALS(fields[0], "_id");
     ASSERT_EQUALS(fields[1], "a");
@@ -111,7 +111,7 @@ TEST(ParsedProjectionTest, MakeSingleField) {
 TEST(ParsedProjectionTest, MakeSingleFieldCovered) {
     unique_ptr<ParsedProjection> parsedProj(createParsedProjection("{}", "{_id: 0, a: 1}"));
     ASSERT(!parsedProj->requiresDocument());
-    const vector<string>& fields = parsedProj->getRequiredFields();
+    const vector<StringData>& fields = parsedProj->getRequiredFields();
     ASSERT_EQUALS(fields.size(), 1U);
     ASSERT_EQUALS(fields[0], "a");
 }
@@ -119,7 +119,7 @@ TEST(ParsedProjectionTest, MakeSingleFieldCovered) {
 TEST(ParsedProjectionTest, MakeSingleFieldIDCovered) {
     unique_ptr<ParsedProjection> parsedProj(createParsedProjection("{}", "{_id: 1}"));
     ASSERT(!parsedProj->requiresDocument());
-    const vector<string>& fields = parsedProj->getRequiredFields();
+    const vector<StringData>& fields = parsedProj->getRequiredFields();
     ASSERT_EQUALS(fields.size(), 1U);
     ASSERT_EQUALS(fields[0], "_id");
 }
@@ -128,7 +128,7 @@ TEST(ParsedProjectionTest, MakeSingleFieldIDCovered) {
 TEST(ParsedProjectionTest, MakeSingleFieldCoveredBoolean) {
     unique_ptr<ParsedProjection> parsedProj(createParsedProjection("{}", "{_id: 0, a: true}"));
     ASSERT(!parsedProj->requiresDocument());
-    const vector<string>& fields = parsedProj->getRequiredFields();
+    const vector<StringData>& fields = parsedProj->getRequiredFields();
     ASSERT_EQUALS(fields.size(), 1U);
     ASSERT_EQUALS(fields[0], "a");
 }
@@ -137,7 +137,7 @@ TEST(ParsedProjectionTest, MakeSingleFieldCoveredBoolean) {
 TEST(ParsedProjectionTest, MakeSingleFieldCoveredIdBoolean) {
     unique_ptr<ParsedProjection> parsedProj(createParsedProjection("{}", "{_id: false, a: 1}"));
     ASSERT(!parsedProj->requiresDocument());
-    const vector<string>& fields = parsedProj->getRequiredFields();
+    const vector<StringData>& fields = parsedProj->getRequiredFields();
     ASSERT_EQUALS(fields.size(), 1U);
     ASSERT_EQUALS(fields[0], "a");
 }
@@ -276,6 +276,162 @@ TEST(ParsedProjectionTest, SortKeyMetaAndExclusion) {
     ASSERT_FALSE(parsedProjection->wantGeoNearDistance());
     ASSERT_FALSE(parsedProjection->wantGeoNearPoint());
     ASSERT_FALSE(parsedProjection->wantIndexKey());
+}
+
+//
+// Cases for ParsedProjection::isFieldRetainedExactly().
+//
+
+TEST(ParsedProjectionTest, InclusionProjectionPreservesChild) {
+    auto parsedProjection = createParsedProjection("{}", "{a: 1}");
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("a.b"));
+}
+
+TEST(ParsedProjectionTest, InclusionProjectionDoesNotPreserveParent) {
+    auto parsedProjection = createParsedProjection("{}", "{'a.b': 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, InclusionProjectionPreservesField) {
+    auto parsedProjection = createParsedProjection("{}", "{a: 1}");
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, InclusionProjectionOrderingDeterminesPreservation) {
+    auto parsedProjection = createParsedProjection("{}", "{a: 1, 'a.b': 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("a.b"));
+
+    parsedProjection = createParsedProjection("{}", "{'a.b': 1, a: 1}");
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("a"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("a.b"));
+}
+
+TEST(ParsedProjectionTest, ExclusionProjectionDoesNotPreserveParent) {
+    auto parsedProjection = createParsedProjection("{}", "{'a.b': 0}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, ExclusionProjectionDoesNotPreserveChild) {
+    auto parsedProjection = createParsedProjection("{}", "{a: 0}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a.b"));
+}
+
+TEST(ParsedProjectionTest, ExclusionProjectionDoesNotPreserveField) {
+    auto parsedProjection = createParsedProjection("{}", "{a: 0}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, InclusionProjectionDoesNotPreserveNonIncludedFields) {
+    auto parsedProjection = createParsedProjection("{}", "{a: 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("c"));
+}
+
+TEST(ParsedProjectionTest, ExclusionProjectionPreservesNonExcludedFields) {
+    auto parsedProjection = createParsedProjection("{}", "{a: 0}");
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("c"));
+}
+
+TEST(ParsedProjectionTest, PositionalProjectionDoesNotPreserveField) {
+    auto parsedProjection = createParsedProjection("{a: {$elemMatch: {$eq: 0}}}", "{'a.$': 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, PositionalProjectionDoesNotPreserveChild) {
+    auto parsedProjection = createParsedProjection("{a: {$elemMatch: {$eq: 0}}}", "{'a.$': 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a.b"));
+}
+
+TEST(ParsedProjectionTest, PositionalProjectionDoesNotPreserveParent) {
+    auto parsedProjection =
+        createParsedProjection("{'a.b': {$elemMatch: {$eq: 0}}}", "{'a.b.$': 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, MetaProjectionDoesNotPreserveField) {
+    auto parsedProjection = createParsedProjection("{}", "{a: {$meta: 'textScore'}}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, MetaProjectionDoesNotPreserveChild) {
+    auto parsedProjection = createParsedProjection("{}", "{a: {$meta: 'textScore'}}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a.b"));
+}
+
+TEST(ParsedProjectionTest, IdExclusionProjectionPreservesOtherFields) {
+    auto parsedProjection = createParsedProjection("{}", "{_id: 0}");
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, IdInclusionProjectionDoesNotPreserveOtherFields) {
+    auto parsedProjection = createParsedProjection("{}", "{_id: 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, IdSubfieldExclusionProjectionPreservesId) {
+    auto parsedProjection = createParsedProjection("{}", "{'_id.a': 0}");
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("b"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("_id"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("_id.a"));
+}
+
+TEST(ParsedProjectionTest, IdSubfieldInclusionProjectionPreservesId) {
+    auto parsedProjection = createParsedProjection("{}", "{'_id.a': 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("b"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("_id"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("_id.a"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("_id.b"));
+}
+
+TEST(ParsedProjectionTest, IdExclusionWithExclusionProjectionDoesNotPreserveId) {
+    auto parsedProjection = createParsedProjection("{}", "{_id: 0, a: 0}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("_id"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("b"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, IdInclusionWithInclusionProjectionPreservesId) {
+    auto parsedProjection = createParsedProjection("{}", "{_id: 1, a: 1}");
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("_id"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("b"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, IdExclusionWithInclusionProjectionDoesNotPreserveId) {
+    auto parsedProjection = createParsedProjection("{}", "{_id: 0, a: 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("_id"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("b"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("a"));
+}
+
+TEST(ParsedProjectionTest, PositionalProjectionDoesNotPreserveFields) {
+    auto parsedProjection = createParsedProjection("{a: 1}", "{'a.$': 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("b"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a.b"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("_id"));
+}
+
+TEST(ParsedProjectionTest, PositionalProjectionWithIdExclusionDoesNotPreserveFields) {
+    auto parsedProjection = createParsedProjection("{a: 1}", "{_id: 0, 'a.$': 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("b"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a.b"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("_id"));
+}
+
+TEST(ParsedProjectionTest, PositionalProjectionWithIdInclusionPreservesId) {
+    auto parsedProjection = createParsedProjection("{a: 1}", "{_id: 1, 'a.$': 1}");
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("b"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("a.b"));
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("_id"));
+}
+
+TEST(ParsedProjectionTest, ProjectionOfFieldSimilarToIdIsNotSpecial) {
+    auto parsedProjection = createParsedProjection("{}", "{_idimpostor: 0}");
+    ASSERT_TRUE(parsedProjection->isFieldRetainedExactly("_id"));
+    ASSERT_FALSE(parsedProjection->isFieldRetainedExactly("_idimpostor"));
 }
 
 //
